--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install K6
       run: |
         sudo apt update
-        sudo apt install -y k6
+        sudo snap install k6
+
 
     - name: Run K6 load tests
       run: k6 run teste.js
